# designate-specs

./: .gitignore  .gitreview  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/antelope/: catalog-zones.rst  zone-pool-move.rst
specs/juno/: filtering.rst  v2-bindings.rst  zone-and-record-totalcount.rst  zone-migration-between-tenants.rst
specs/kilo/: guru-meditation-reports.rst  new-agent.rst  secondary-zones.rst  server-pools-api.rst  server-pools-minidns-support.rst  server-pools-service.rst  server-pools-storage.rst  server-pools.rst  switch-to-keystone-session.rst  validation-cleanup.rst  zone-import-refactor.rst
specs/liberty/: async-import-export.rst  deleted-domains-purging.rst  designate-driver.rst  graded-backends.rst  hook-point-api.rst  placeholder.rst  zone-exists-event.rst
specs/mitaka/: alias-records.rst  notify-throttling.rst
specs/newton/: accepted-zone-transfer.rst  expose-recordsets-api.rst  naming-convention-for-records.rst  worker-model.rst
specs/ocata/: yadifa-backend.rst
specs/ussuri/: split-view.rst
